# hbp

./: .dockerignore  .env  .env.template  .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  ecosystem.config.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy-latest.yml
markdown/: AboutMe.md  README.md  TODOs.md
markdown/blogs/: a-non-zero-sum-game.md  an-idiot-shit-talking.md  hello.md  rust.md  snake-game-in-rust.md  the-next-big-ytc.md
markdown/notes/: BlockChain102.md
migrations/2022-02-24-194917_create_posts/: down.sql  up.sql
migrations/2022-02-27-153254_add_users/: down.sql  up.sql
src/: entities.rs  main.rs
src/data/: lib.rs  mod.rs  models.rs  schema.rs  sqlite.rs  tiny_url_orm.rs  user_orm.rs
src/data/challenge_orm/: mod.rs
src/data/models/: challenges_model.rs  mod.rs  posts_model.rs  profiles_model.rs  tiny_url.rs  users_model.rs
src/data/profile_orm/: mod.rs  profile_orm_test.rs
src/data/user_orm/: mod.rs  user_orm.rs  user_orm_test.rs
src/routes/: blogs.rs  catchers.rs  git.rs  index.rs  markdown.rs  mod.rs  movies_and_tv.rs  nft_gallery.rs  posts.rs  static_files.rs  tiny_urls.rs  users.rs
src/routes/challenges/: mod.rs
src/routes/files/: mod.rs
src/routes/index/: dev_null.rs  mod.rs  readme.rs
src/routes/markdown/: api.rs  mod.rs  ui.rs
src/routes/profiles/: mod.rs
src/routes/users/: api.rs  mod.rs  shared.rs  ui.rs
src/shared/: interfaces.rs  mod.rs
src/shared/entities/: blog.rs  markdown.rs  markdown_test.rs  mod.rs
src/shared/interfaces/: api_error.rs  api_item.rs  api_list.rs  mod.rs  utils.rs
src/shared/interfaces/hbp_types/: challenge.rs  mod.rs  response.rs
src/utils/: auth.rs  constants.rs  cors.rs  env.rs  fso.rs  jwt.rs  markdown.rs  marper.rs  mod.rs  responders.rs  string.rs  template.rs  types.rs
src/utils/auth/: auth_payloads.rs  auth_payloads_test.rs  mod.rs
src/utils/guards/: auth_payload.rs  headers.rs  mod.rs
src/utils/setup_logger/: mod.rs
static/: manifest.json
static/css/: auth.css  index.css  style.css
static/css/blogs/: index.css
static/js/: index.js
template/: git.html  index.html
template/blogs/: index.html
template/gallery/: list.html
template/markdown/: list.html  markdown.html  write-markdown.html
template/static/: directory.html  error.html  markdown.html
template/users/: login.html  profile.html  signup.html
thunder-tests/: thunderCollection.json  thunderEnvironment.json  thunderclient.json
