[package]
name = "hbp"
version = "0.1.0"
authors = ["Phan Huy Hoàng <hoangph271@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = true, features = [
  "json",
  "secrets",
] }
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }
httpstatus = "0.1.2"
anyhow = "1.0.69"
pulldown-cmark = { version = "0.9.2", default-features = false, features = [
  "simd",
] }
serde_derive = "1.0.152"
mustache = "0.9.0"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
walkdir = "2.3.2"
zip = "0.6.4"
tempfile = "3.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.93"
nanoid = "0.4.0"
bcrypt = "0.14.0"
reqwest = { version = "0.11.14", features = ["multipart", "json"] }
futures = "0.3.26"
glob = "0.3.1"
regex = "1.7.1"
urlencoding = "2.1.2"
async-std = { version = "1.12.0", features = ["tokio1"] }
schemars = "0.8.12"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
thiserror = "1.0.37"
async-recursion = "1.0.2"
rand = "0.8.5"
image = "0.24.5"
mime_guess = "2.0.4"
sled = "0.34.7"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
