[package]
name = "hbp"
version = "0.1.0"
authors = ["Phan Huy Hoàng <hoangph271@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = true, features = [
  "json",
  "secrets",
] }
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
httpstatus = "0.1.2"
anyhow = "1.0.70"
pulldown-cmark = { version = "0.9.2", default-features = false, features = [
  "simd",
] }
serde_derive = "1.0.158"
mustache = "0.9.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.158", features = ["derive"] }
walkdir = "2.3.3"
zip = "0.6.4"
tempfile = "3.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.94"
nanoid = "0.4.0"
bcrypt = "0.14.0"
reqwest = { version = "0.11.15", features = ["multipart", "json"] }
futures = "0.3.27"
glob = "0.3.1"
regex = "1.7.3"
urlencoding = "2.1.2"
async-std = { version = "1.12.0", features = ["tokio1"] }
schemars = "0.8.12"
thiserror = "1.0.40"
async-recursion = "1.0.4"
rand = "0.8.5"
image = "0.24.6"
mime_guess = "2.0.4"
sled = "0.34.7"
sha2 = "0.10.6"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
